Keep number on selected account in "Material" view; Fixing an issue with the header on mobile.

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -180,7 +180,6 @@ button[mat-icon-button] {
 header.bmx4 {
   height: 10vh;
   max-height: 6em;
-  overflow: hidden;
 
   nav {
     display: flex;
